--- a/studentstudyportal/dashboard/templates/dashboard/base.html
+++ b/studentstudyportal/dashboard/templates/dashboard/base.html
@@ -38,17 +38,17 @@
                 Options
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Books</a>
-                <a class="dropdown-item" href="#">Wikipedia</a>
+                <a class="dropdown-item" href="#">Homework</a>
+                <a class="dropdown-item" href="#">Notes</a>
                 <div class="dropdown-divider"></div>
 
-                <a class="dropdown-item" href="#">Dictionary</a>
-                <a class="dropdown-item" href="#">Youtube</a>
-                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">To-do</a>
-                <a class="dropdown-item" href="#">Homework</a>
+                <a class="dropdown-item" href="#">Books</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Notes</a>
+                <a class="dropdown-item" href="#">Youtube</a>
+                <a class="dropdown-item" href="#">Dictionary</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">WikiPedia</a>
                 <a class="dropdown-item" href="#">Conversion</a>
                 <div class="dropdown-divider"></div>
               </div>
@@ -68,11 +68,18 @@
       </div>
     </nav>
   </header>
-  <br /><br />
+  
+  
+  
   <main>
 
-    {% block content %}
-    {% endblock content %}
+  
+
+{% block content %}
+
+{% endblock content %}
+
+
 
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
