--- a/studentstudyportal/dashboard/templates/dashboard/base.html
+++ b/studentstudyportal/dashboard/templates/dashboard/base.html
@@ -58,16 +58,17 @@
               <a class="nav-link" href="#">Logout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
+              <a class="nav-link" href="register">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="login">Login</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+ 
   
   
   
