--- a/studentstudyportal/dashboard/templates/dashboard/login.html
+++ b/studentstudyportal/dashboard/templates/dashboard/login.html
@@ -43,6 +43,10 @@
                               <button class="btn btn-primary btn-block" type="submit">Login</button>
                            </div>
                         </form>
+                        {{form.errors}}
+                        {% for message in messages %}
+                        <p1 id="messages">{{message}}</p1>
+                        {% endfor %}
                         
                         <div class="login-or">
                            <span class="or-line"></span>
