--- a/studentstudyportal/dashboard/templates/dashboard/register.html
+++ b/studentstudyportal/dashboard/templates/dashboard/register.html
@@ -59,6 +59,7 @@
 <button class="btn btn-primary btn-block" type="submit">Register</button>
 </div>
 </form>
+{{form.errors}}
 
 <div class="login-or">
 <span class="or-line"></span>
