--- a/studentstudyportal/dashboard/templates/dashboard/register.html
+++ b/studentstudyportal/dashboard/templates/dashboard/register.html
@@ -20,7 +20,7 @@
 <div class="login-wrapper">
 <div class="container">
 <div class="loginbox">
-    <div class="login-left" style="background-image: url({% static 'images/lloogin.jpg' %});" >
+<div class="login-left" style="background-image: url('D:\6th sem\Project II\django\studentstudyportal\static\images\lloogin.jpg')">
 
 </div>
 <div class="login-right">
@@ -74,9 +74,9 @@
 
 <script>
     
-                        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-        //We start indexing at one because CSRF_token is considered and input field 
-         */
+        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+        We start indexing at one because CSRF_token is considered and input field 
+        */
 
         //Query All input fields
         var form_fields = document.getElementsByTagName('input')
