--- a/studentstudyportal/dashboard/templates/dashboard/base.html
+++ b/studentstudyportal/dashboard/templates/dashboard/base.html
@@ -70,9 +70,13 @@
   </header>
  
   
-  
-  
   <main>
+    {% if messages %}
+      {% for msg in messages %}
+        <div class="alert alert-{{msg.tags}}">{{msg}}</div>
+      {% endfor %}
+    {% endif %}
+
 
   
 
