--- a/studentstudyportal/dashboard/templates/dashboard/home.html
+++ b/studentstudyportal/dashboard/templates/dashboard/home.html
@@ -13,14 +13,14 @@
   <hr> <br>
   <div class="row">
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'homework' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/homework.jpg' %}" alt="Notes image">
           <div class="card-body">
             <h5 class="card-title ">
               Homework
             </h5>
-            Add homeworks and assign them deadlines. They will be displayed prioritised by deadlines
+            Add homeworks and assign them deadlines. They will be displayed prioritised by deadlines.
             
           </div>
         </div>
@@ -36,20 +36,20 @@
             <h5 class="card-title ">
               Notes
             </h5>
-            Create Notes to refer them later. They are stored permanently until deleted
+            Create Notes to refer them later. They are stored permanently until deleted.
           </div>
         </div>
       </a>
     </div>
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'todo' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/todo.jpg' %}" alt="Notes image">
           <div class="card-body">
             <h5 class="card-title ">
               To Do
             </h5>
-            Add your to-do lists for your day and remove them as you finish
+            Add your to-do lists for your day and remove them as you finish.
             </div>
         </div>
       </a>
@@ -64,7 +64,7 @@
             <h5 class="card-title ">
               Books
             </h5>
-            Browse books from a list of neatly organised book menu
+            Browse books from a list of neatly organised book menu.
           </div>
         </div>
       </a>
@@ -73,14 +73,14 @@
   <br><br><br>
   <div class="row">
     <div class="col-md-3 ">
-      <a href="#">
+      <a href="{% url 'youtube' %}">
         <div class="card mt-20">
           <img class="card-img-top" src="{% static 'images/youtube.jpg' %}" alt="Notes image">
           <div class="card-body">
             <h5 class="card-title ">
               Youtube
             </h5>
-            Search Youtube and select your desired video to play it on youtube
+            Search Youtube and select your desired video to play it on youtube.
           </div>
         </div>
       </a>
@@ -110,7 +110,7 @@
             <h5 class="card-title ">
               WikiPedia
             </h5>
-            Homework and Assignments? Search wikipedia to get fast results
+            Homework and Assignments? Search wikipedia to get fast results.
           </div>
         </div>
       </a>
