Final commit for the project-NS

--- a/studentstudyportal/dashboard/templates/dashboard/home.html
+++ b/studentstudyportal/dashboard/templates/dashboard/home.html
@@ -57,7 +57,7 @@
 
 
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'books' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/books.jpg' %}" alt="Notes image">
           <div class="card-body">
@@ -89,7 +89,7 @@
 
 
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'dictionary' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/dictionary.jpg' %}" alt="Notes image">
           <div class="card-body">
@@ -103,7 +103,7 @@
       </a>
     </div>
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'wiki' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/wiki.jpg' %}" alt="Notes image">
           <div class="card-body">
@@ -118,7 +118,7 @@
 
 
     <div class="col-md-3">
-      <a href="#">
+      <a href="{% url 'conversion' %}">
         <div class="card">
           <img class="card-img-top" src="{% static 'images/conversion.jpg' %}" alt="Notes image">
           <div class="card-body">
